test_regress/t/t_implements_noinherit_bad.out
%Error: t/t_implements_noinherit_bad.v:14:16: Can't find definition of variable: 'IP'
   14 |       $display(IP);  
      |                ^~
        ... See the manual at https://verilator.org/verilator_doc.html?v=latest for more assistance.
%Error: Exiting due to
